Simple busy service

--- a/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ShellPage.xaml
@@ -46,6 +46,7 @@
             ExpandedModeThresholdWidth="1280"
             IsBackButtonVisible="Auto"
             IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
+            IsEnabled="{x:Bind ViewModel.IsEnabled, Mode=OneWay}"
             IsPaneVisible="{x:Bind ViewModel.IsNotFirstTimeStartupPage, Mode=OneWay}"
             IsSettingsVisible="True"
             OpenPaneLength="220"
