--- a/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
@@ -9,6 +9,7 @@
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:services="using:GIMI_ModManager.Core.Services"
+    xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     xmlns:winUiEx="using:WinUIEx"
     x:Name="RootWindow"
     mc:Ignorable="d">
@@ -17,7 +18,7 @@
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
-    <Page>
+    <Page IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}">
         <Page.Resources>
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </Page.Resources>
@@ -51,10 +52,10 @@
 
                 <ListView
                     Grid.Row="1"
-                    ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
+                    ItemsSource="{x:Bind ViewModel.ModFileInfos, Mode=OneWay}"
                     SelectionMode="None">
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="services:UpdateCheckResult">
+                        <DataTemplate x:DataType="viewModels:ModFileInfoVm">
                             <Grid
                                 Margin="0,8"
                                 Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
@@ -63,7 +64,8 @@
                                 <controls:BoolBorder
                                     BorderColor="{ThemeResource AccentFillColorSelectedTextBackgroundBrush}"
                                     BorderSize="2"
-                                    ShowBorder="{x:Bind IsNewer}">
+                                    IsEnabled="{x:Bind IsBusy, Mode=OneWay}"
+                                    ShowBorder="{x:Bind IsNew}">
                                     <Grid Margin="8">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
@@ -101,14 +103,31 @@
                                             Grid.Column="1"
                                             HorizontalAlignment="Right"
                                             Text="New since last check"
-                                            Visibility="{Binding Path=IsNewer, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
+                                            Visibility="{Binding Path=IsNew, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
 
-                                        <Button
-                                            Grid.Row="1"
-                                            Grid.Column="1"
-                                            HorizontalAlignment="Right"
-                                            Content="(Not Implemented) Download "
-                                            IsEnabled="False" />
+                                        <StackPanel Grid.Row="1" Grid.Column="1">
+                                            <Grid>
+                                                <Button
+                                                    Width="90"
+                                                    HorizontalAlignment="Right"
+                                                    Command="{x:Bind DownloadCommand}"
+                                                    CommandParameter="{Binding Mode=OneWay}"
+                                                    Content="Download" />
+
+                                                <Button
+                                                    Width="90"
+                                                    HorizontalAlignment="Right"
+                                                    Content="Install" />
+                                            </Grid>
+
+
+                                            <ProgressBar
+                                                Width="90"
+                                                HorizontalAlignment="Right"
+                                                Maximum="100"
+                                                Value="{x:Bind DownloadProgress, Mode=OneWay}" />
+
+                                        </StackPanel>
                                     </Grid>
                                 </controls:BoolBorder>
                             </Grid>
